tests/fail/parse/syntax/i8_fail.leo
function main() {
    let i8 = 0u32;
}